# backend

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  pytest.ini  test.db
app/: app.py
app/constants/: errors.py
app/core/: __init__.py  blueprints.py  choices.py  config.py  cors.py  deps.py  enums.py  errorhanlder.py  mockings.py  model.py  rabbitmq.py  secrets.py  token.py  utils.py
app/db/: session.py
app/db/alembic/: env.py
app/db/alembic/versions/: 04214ef83305_modify_match_and_guest_table.py  0cb463fadd24_create_user_table.py  0e8b215b1c84_remove_age_gender_skill_location_field_.py  1584b05f8ca9_add_time_field_of_match_model.py  168117b089aa_change_field_name.py  17c8e176960f_remove_team_size_in_club.py  1928da62cee6_add_type_field_in_sns.py  1a4da4a7b1f8_add_title_of_guest.py  1cdfc9d0487f_create_club_table.py  1ef70dd3db8b_add_lon_lat_fields_in_match.py  203f77dce831_change_status_of_match.py  240f608b8121_add_match_type.py  255977718c41_remove_clubs_columns_in_profile_table.py  294a3ff6e932_add_gender_location_age_group_foot_.py  30db74217de5_modify_position_upgrade_function.py  374341726008_add_chat_leave_field.py  3fbe5e20d8da_add_user_field_in_sns.py  4233de6985fc_create_join_match_table.py  445d95b3fb61_create_memberposting_and_.py  495b4ff094c1_faq_table.py  4be65ab040e8_relation_table.py  50432d531f5c_create_join_club_posting_table.py  58d44d965ece_create_firebase_table.py  5a80394fe98e_remove_unique_email.py  5c8ff5298885_create_email_table.py  6e01656e5ff1_rename_user_table_age_to_birth_date.py  702f43f1b165_create_chat.py  71c407fe216c_banner_table.py  7421372e6015_add_date_field_to_all_posting_tables.py  75a7ada463d9_relation_table_profile.py  77d0de6ef256_add_level_field_in_profile.py  78ea277ae45f_add_attendee_type_to_joinpoll.py  7a6e4a980c35_add_join_club__table.py  7b1ab380a1ca_add_join_position_table.py  8d9a2f6695ab_modify_guest_table_skill_to_level.py  8dba6a74cc12_remove_match_type.py  8ff415cb2ace_create_poll_and_join_poll_table.py  90bbed41cff2_modify_match_skill_to_level.py  92944486d621_add_position_field_in_profile.py  9595a3280bd6_add_user_seq_field_in_match.py  (+36 more)
app/helper/: exception.py
app/model/: banner.py  chat.py  club.py  clubPosting.py  clubs.py  device.py  email.py  faq.py  firebase.py  guest.py  match.py  memberPosting.py  notification.py  poll.py  position.py  profile.py  province.py  sns.py  user.py
app/rest_api/api/: __init__.py  banner.py  chat.py  club.py  clubPosting.py  memberPosting.py  poll.py  position.py  province.py  user.py
app/rest_api/api/banner/: banner.py
app/rest_api/api/club/: club.py  clubPosting.py
app/rest_api/api/firebase/: firebase.py
app/rest_api/api/guest/: guest.py
app/rest_api/api/match/: match.py
app/rest_api/api/notification/: faq.py  notification.py
app/rest_api/controller/: club.py  email.py  file.py  poll.py  user.py
app/rest_api/controller/club/: club_posting.py
app/rest_api/controller/common/: interface.py
app/rest_api/controller/guest/: guest.py
app/rest_api/controller/match/: match.py
app/rest_api/schema/: banner.py  base.py  chat.py  club.py  clubPosting.py  email.py  memberPosting.py  poll.py  position.py  profile.py  token.py  user.py
app/utils/: email_form.py  schema.py
cloudformation/: IAM.yaml  Instances.yaml  KeyPair.yaml  Policy.yaml  RDS.yaml  Role.yaml  Secret.yaml  SecurityGroup.yaml  VPC.yaml
cloudformation/templates/: Instance.yaml
test/: conftest.py  test_01_setup_user.py  test_02_setup_club.py  test_user.py
(+9 files in other folders)
