[tool.poetry]
name = "our-league"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "our_league"}]

[tool.poetry.dependencies]
python = "3.10.5"
fastapi = "^0.101.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
